--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -352,6 +352,10 @@ template {
 /* =============
     Base
 ============= */
+.gs-dev-tools {
+  z-index: 10000;
+}
+
 figure {
   margin: 0;
   padding: 0;
@@ -365,21 +369,6 @@ ul li {
   list-style: none;
 }
 
-.container-grid {
-  display: grid;
-  grid-template-areas: ". grid-content .";
-  grid-template-columns: 15px auto 15px;
-  height: 100vh;
-}
-@media (min-width: 1200px) {
-  .container-grid {
-    grid-template-columns: auto 1200px auto;
-  }
-}
-.container-grid > div {
-  grid-area: grid-content;
-}
-
 /* =============
     Typography
 ============= */
@@ -391,11 +380,6 @@ h1, h2, h3, h4 {
 p {
   margin: 0;
   padding: 0;
-}
-
-h1 {
-  font-size: 6.25rem;
-  color: red;
 }
 
 /* =============
@@ -428,3 +412,20 @@ textarea {
 /* =============
     Footer
 ============= */
+#titleanimation {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  display: grid;
+  grid-template-areas: ". titleanimation .";
+  grid-template-columns: auto 65% auto;
+}
+#titleanimation > div {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  grid-area: titleanimation;
+}
