--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -1,6 +1,11 @@
 /* =============
     Base
 ============= */
+.gs-dev-tools{
+
+    z-index: 10000;
+}
+
 figure {
     margin: 0;
     padding: 0;
@@ -12,20 +17,5 @@ ul {
 
     li {
         list-style: none;
-    }
-}
-
-.container-grid {
-    display: grid;
-    grid-template-areas: ". grid-content .";
-    grid-template-columns: 15px auto 15px;
-    height: 100vh;
-
-    @include xl {
-        grid-template-columns: auto 1200px auto;
-    }
-
-    >div {
-        grid-area: grid-content;
     }
 }
